# hce

./: .gitignore  CLAUDE.md  COMPETITORS.md  FAQ.md  HOW_IT_WORKS.md  README.md  SCALABILITY.md  architecture_plan.md  entity_extractor.py  hce_core.py  hce_mcp_server.py  hce_pipeline.py  phase1_plan.md  phase2_plan.md  phase3_plan.md  phase4_plan.md  project_crawler.py  pyproject.toml  semantic_tree.py  test_entity_extractor.py  test_hce_core.py  test_hce_mcp_server.py  test_hce_pipeline.py  test_project_crawler.py  test_semantic_tree.py
